--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,3 +1,314 @@
-// p {
-//   color: red;
-// }
+@import "bootstrap-sprockets";
+@import "bootstrap";
+$primary-color: #ff8a00;
+$color1: #ffc000;
+$color2: #ff8a00;
+$gray: #5c5c5c;
+$black: #212121;
+$gray-light: #fff7df;
+$bgc-gradient: linear-gradient(253.58deg, #ffc000 1.55%, #ff8a00 95.8%);
+//global
+body {
+    line-height: 1;
+    
+    color: $gray;
+    font-weight: 400;
+    background-color: white;
+  }
+  .wrapper {
+    max-width: 1500px;
+    margin: 0 auto;
+  }
+  .container-fluid {
+    max-width: 1328px;
+    margin: 0 auto;
+  }
+  .container {
+    max-width: 1239px;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+  .button {
+    display: inline-block;
+    padding: 20px 0;
+    border-radius: 100px;
+
+    line-height: calc(21 / 16);
+    font-size: 14px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    text-align: center;
+    white-space: nowrap;
+    font-weight: 700;
+    &--primary {
+      // background-image: linear-gradient(253.58deg, #ffc000 1.55%, #ff8a00 95.8%);
+      color: $gray-light;
+      background-color: $primary-color;
+    }
+    &--secondary {
+      background-color: $gray-light;
+      color: $primary-color;
+    }
+    &--search {
+        padding:10px 40px;
+        border:none;
+        margin-left:20px;
+    }
+  }
+  .form-control{
+      width: 800px !important;
+      padding: 10px 40px;
+  }
+  
+
+//reset
+html {
+    box-sizing: border-box;
+  }
+  * {
+    margin: 0;
+    padding: 0;
+  }
+  *,
+  *:before,
+  *:after {
+    box-sizing: border-box;
+  }
+  input,
+  textarea,
+  select,
+  button {
+    outline: none;
+  }
+  input {
+    line-height: normal;
+  }
+  li {
+    list-style-type: none;
+  }
+  label,
+  button {
+    cursor: pointer;
+  }
+  a {
+    text-decoration: none;
+  }
+  img {
+    display: block;
+    max-width: 100%;
+  }
+  
+//header
+.header {
+    background: #dedee2d2;
+    &-main {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 0 240px;
+      padding: 29px 0;
+    }
+    &-logo {
+      width: 160px;
+      height: 70px;
+      overflow: hidden;
+      img {
+        // width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+  }
+  @media screen and (max-width: 1279px) {
+    .header-main {
+      padding: 15px 0;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    .header-main {
+      gap: 0 0;
+    }
+  }
+  
+
+
+  //menu
+  .menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 0 24px;
+    &-list {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 0 50px;
+    }
+    &-button {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 0 10px;
+      .button {
+        width: 160px;
+      }
+    }
+    &-item {
+    //   font-family: $font-secondary;
+      font-weight: 400;
+      font-size: 15px;
+      line-height: calc(18 / 15);
+      color: $bgc-gradient;
+      background: -webkit-linear-gradient($color1, $color2);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    &-link {
+      color: inherit;
+    }
+  }
+  @media screen and (max-width: 1279px) {
+    .menu-list {
+      display: none;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    .menu-button {
+      display: none;
+    }
+  }
+  
+
+  //footer
+  .footer {
+
+    margin-top : 300px;
+    background-color: $black;
+    padding-top: 46px;
+    &-main {
+      display: flex;
+      justify-content: space-between;
+      align-items: stretch;
+      gap: 0 192px;
+    }
+
+    &-logo {
+      width: 142.15px;
+      overflow: hidden;
+      margin-bottom: 31px;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    &-title {
+      display: block;
+      font-size: 14px;
+      line-height: 17px;
+      color: #ffffff;
+      font-weight: 400;
+      margin-bottom: 40px;
+      max-width: 265px;
+    }
+    &-social {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 0 11px;
+    }
+    &-right {
+      display: flex;
+      justify-content: space-between;
+      align-items: stretch;
+      gap: 0 84px;
+    }
+    &-heading {
+      font-size: 15px;
+      line-height: 175.78%;
+      font-weight: 700;
+      color: #ffffff;
+      margin-bottom: 30px;
+    }
+    &-column {
+      max-width: 238px;
+      margin-bottom: 29px;
+      &:nth-child(3) {
+        //  transform: translateY(110px);
+        padding-top: 100px;
+        max-width: 150px;
+      }
+    }
+    &-link {
+      color: #ffffff;
+      font-size: 15px;
+      line-height: 175.78%;
+    }
+    &-bottom {
+      background-color: #000000;
+      padding: 13px 110px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      span {
+        font-size: 12px;
+        line-height: calc(15 / 12);
+        font-weight: 400;
+        color: #ffffff;
+      }
+    }
+    &-privacy {
+      span {
+        color: $color1;
+      }
+    }
+  }
+  @media screen and (max-width: 1279px) {
+    .footer-main {
+      gap: 0 160px;
+    }
+  }
+  @media screen and (max-width: 1023px) {
+    .footer-main {
+      gap: 0 100px;
+    }
+    .footer-right {
+      gap: 0 50px;
+    }
+    .footer-heading {
+      margin-bottom: 20px;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    .footer-main {
+      flex-direction: column;
+      gap: 10px;
+    }
+    .footer-right {
+      flex-direction: column;
+      // gap: 10px 0;
+    }
+    .footer-heading {
+      margin-bottom: 10px;
+    }
+    .footer-title {
+      margin-bottom: 20px;
+    }
+    .footer-column:nth-child(3) {
+      padding-top: 0px;
+    }
+    .footer-bottom {
+      flex-direction: column;
+      gap: 10px 0;
+      padding: 13px 50px;
+    }
+  }
+  .form-search{
+    margin-top: 50px;
+  }
+  .filter-search{
+      padding: 7px 35px;
+      margin-right: 10px;
+  }
+  
