--- a/app/views/layouts/admin/_header.slim
+++ b/app/views/layouts/admin/_header.slim
@@ -19,5 +19,5 @@ body
               a.menu-link = link_to "Manage Author", '#'
            
           .menu-button
-            .button.button--primary =link_to "Signup", '#'
-            .button.button--secondary =link_to "Log in", '#'
+            .button.button--secondary =link_to "Log out", '#'
+            
