--- a/app/views/layouts/admin/application.slim
+++ b/app/views/layouts/admin/application.slim
@@ -4,9 +4,10 @@ html
 
 head
 
-title E-Learning
+title Thu Vien
 
-= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
+= stylesheet_link_tag 'application', 
+media: 'all', 'data-turbolinks-track' => true
 
 = javascript_include_tag 'application', 'data-turbolinks-track' => true
 
@@ -15,9 +16,13 @@ title E-Learning
 
 script src="https://code.jquery.com/jquery-3.1.1.min.js"
 
-script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"
+script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" 
+integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" 
+crossorigin="anonymous"
 
-script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"
+script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" 
+integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" 
+crossorigin="anonymous"
 
 body
 
@@ -26,4 +31,3 @@ body
   .container
   = yield
   = render'layouts/footer'
-
