--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -4,7 +4,7 @@ html
 
 head
 
-title E-Learning
+title Thu Vien
 
 = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
 
@@ -15,12 +15,12 @@ title E-Learning
 
 script src="https://code.jquery.com/jquery-3.1.1.min.js"
 script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" 
-integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" 
-crossorigin="anonymous"
+  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" 
+  crossorigin="anonymous"
 
 script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" 
-integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" 
-crossorigin="anonymous"
+  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" 
+  crossorigin="anonymous"
 body
   = render'layouts/header'
   .container
