Add task sign up

--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -16,5 +16,5 @@ body
             li.menu-item
               a.menu-link = link_to "Contact Us", '#'
           .menu-button
-            .button.button--primary =link_to "Signup", '#'
+            .button.button--primary =link_to "Signup", signup_path
             .button.button--secondary =link_to "Log in", '#'
