--- a/app/views/books/_form-search.slim
+++ b/app/views/books/_form-search.slim
@@ -1,5 +1,5 @@
 .form-search
-  = form_tag "/books", method: :get, class: "form-inline" do
+  = form_tag books_path, method: :get, class: "form-inline" do
     label for="search"  
     select.filter-search name="search" 
       optgroup label=("Type search") 
@@ -7,5 +7,5 @@
         option value="saab"  Categories 
         option value="mercedes"  Name Book
         option value="audi"  Publisher
-    = text_field_tag "name", params[:query],class: "form-control", placeholder: "Input keyword"
+    = text_field_tag :term, params[:query],class: "form-control", placeholder: "Input keyword"
     = submit_tag "Search", class: "button--search"
