--- a/app/views/books/_form-search.slim
+++ b/app/views/books/_form-search.slim
@@ -1,11 +1,11 @@
 .form-search
-  = form_tag books_path, method: :get, class: "form-inline" do
-    label for="search"  
-    select.filter-search name="search" 
-      optgroup label=("Type search") 
-        option value="volvo"  Author
-        option value="saab"  Categories 
-        option value="mercedes"  Name Book
-        option value="audi"  Publisher
-    = text_field_tag :term, params[:query],class: "form-control", placeholder: "Input keyword"
-    = submit_tag "Search", class: "button--search"
+  =form_tag books_path, method: :get, class: "form-inline" do
+    p
+      = collection_select(nil, :author_id, Author.all, :id, :name, 
+        {selected: params[:author_id], prompt: true},
+        class: "filter-search")
+      = collection_select(nil, :publisher_id, Publisher.all, :id, :name, 
+        {selected: params[:publisher_id], prompt: true},
+        class: "filter-search")
+      = text_field_tag :name, params[:name], class: "form-control"
+      = submit_tag "Search", name: nil, class: "button--search"
