--- a/app/views/books/_item-book.slim
+++ b/app/views/books/_item-book.slim
@@ -1,19 +1,23 @@
 .book 
-  -@books.each do |book| 
-    .book-list 
-      p.book-title 
-        | Tên sách: 
-        =book.name
-      p.book-author
-        | Tác giả: 
-        -author = Author.find(book.author_id)
-        = author.name
-      p.book-amount 
-        | Sô lượng:
-        =book.amount
-      p.book-rate
-        | Đánh giá:
-        -rate = Rate.find(book.id)
-        =rate.star
-      =link_to "follow",'#',class: "follow"          
-      =link_to "Details", "#",class: "details"
+  -if @books.empty?
+    p.messa
+      | Không có sách vào cả!!!
+  -else  
+    -@books.each do |book| 
+      .book-list 
+        p.book-title 
+          | Tên sách: 
+          =book.name
+        p.book-author
+          | Tác giả: 
+          -author = Author.find(book.author_id)
+          = author.name
+        p.book-amount 
+          | Sô lượng:
+          =book.amount
+        p.book-rate
+          | Đánh giá:
+          -rate = Rate.find(book.id)
+          =rate.star
+        =link_to "follow",'#',class: "follow"          
+        =link_to "Details", "#",class: "details"
