--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -15,5 +15,7 @@ head
 body
   = render'layouts/header'
   .container
+    - flash.each do |message_type, message|
+      div class=("alert alert-#{message_type}") = message
     = yield
   = render'layouts/footer'
