--- a/app/views/users/new.slim
+++ b/app/views/users/new.slim
@@ -5,6 +5,7 @@
 .row
   .col-md-6.col-md-offset-3
     = form_for(@user) do |f|
+      = render 'shared/error_messages'
       = f.label :name
       = f.text_field :name, class: 'form-control'
       = f.label :email
