Update code author

--- a/app/views/authors/_author.slim
+++ b/app/views/authors/_author.slim
@@ -2,18 +2,17 @@
 .h1_title
   h1
     | Author
-.author
+.authors
   h3
     | Information Author:
-  -@author.each do |author|
+  -@authors.each do |authors|
     a = link_to 
       img.image-author src=" https://i1.rgstatic.net/ii/profile.image/716475023233024-1547832365171_Q512/Michael-Harth.jpg"
     .author-list
       p.author
         | - Author:
-        = author.name
+        = authors.name
       p
         | - Birth day: 10-01-1999
       p
         | - Books: Conan, Harry Pooter
-        
