--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -64,6 +64,14 @@ body {
   text-align: center;
 }
 
+.col-md-offset-3 {
+  margin-left: 15%;
+}
+
+.form-control {
+  margin: 10px 0;
+}
+
 //reset
 html {
     box-sizing: border-box;
