--- a/app/views/shared/_error_messages.slim
+++ b/app/views/shared/_error_messages.slim
@@ -1,6 +1,6 @@
 - if @user.errors.any?
   #error_explanation
-    .alert.alert-danger
+    .alert.alert-danger.form-control
       |  The form contains 
       = pluralize(@user.errors.count, "error")
       | . 
