--- a/app/views/users/new.slim
+++ b/app/views/users/new.slim
@@ -3,7 +3,7 @@
   h1
     | Sign up
 .row
-  .col-md-6.col-md-offset-3
+  .col-md-offset-3
     = form_for(@user) do |f|
       = render 'shared/error_messages'
       = f.label :name
@@ -14,4 +14,4 @@
       = f.password_field :password, class: 'form-control'
       = f.label :password_confirmation, "Confirmation"
       = f.password_field :password_confirmation, class: 'form-control'
-      = f.submit "Create my account", class: "btn btn-primary"
+      = f.submit "Create my account", class: "btn btn-primary form-control"
