--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -12,7 +12,7 @@ body {
   line-height: 1;
   color: $gray;
   font-weight: 400;
-  background-color: white;
+  background-color: #e3e3e375;
   }
   .wrapper {
     max-width: 1500px;
@@ -79,6 +79,9 @@ html {
   }
   input {
     line-height: normal;
+  }
+  p{
+    text-transform: capitalize;
   }
   li {
     list-style-type: none;
@@ -295,8 +298,16 @@ html {
   }
   .form-search{
     margin-top: 50px;
+    padding: 20px 10px;
+    display: fe;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: end;
+    background-color: #fff;
   }
   .filter-search{
     padding: 7px 35px;
     margin-right: 10px;
+    background-color: #fff;
   }
