--- a/app/assets/stylesheets/item_book.scss
+++ b/app/assets/stylesheets/item_book.scss
@@ -1,20 +1,40 @@
 .book{
 	display: grid;
-	grid-template-columns: repeat(5, 1fr);
-	grid-gap: 30px 80px;
+	grid-template-columns: repeat(6, 1fr);
+	grid-gap: 32px 39px;
 	margin-top: 50px;
+	padding: 40px 20px;
+	background: #ffffff;
 	&-list{
 		padding: 10px 5px;
-		border: 1px solid black;
 		width: 150px;
-		height: 200px;
+		height: 150px;
+		transition: all 0.5s;
+		&:hover{
+			.follow, .details{
+				background-color:rgb(61, 129, 156);
+			}
+			box-shadow: rgba(118, 118, 126, 0.2) 0px 7px 29px 0px;
+		}
+	}
+	&-title, &-author{
+		display: inline-block;
+    width: 140px;
+    white-space: nowrap;
+    overflow: hidden !important;
+    text-overflow: ellipsis;
+	}
+	&-title{
+		font-size: 15px;
 	}
 }
 .follow, .details{
 	padding: 5px;
-	border: 1px solid black;
 	color: black;
-	background-color:rgb(135, 135, 139);
+	text-transform: capitalize;
+	&:hover{
+		text-decoration: none;
+	}
 }
 .follow{
 	margin-right: 10px;
