--- a/app/views/books/_item-book.slim
+++ b/app/views/books/_item-book.slim
@@ -1,23 +1,25 @@
+h3
+  | Tong sach : 
+  = @books.length
 .book 
-  -if @books.empty?
+  - if @books.empty?
     p.messa
       | Không có sách vào cả!!!
   - else  
     - @books.each do |book| 
       .book-list 
         p.book-title 
-          | Tên sách: 
+          | Tên:  
           = book.name
-        p.book-author
+        p.book-author 
           | Tác giả: 
-          - author = Author.find(book.author_id)
-          = author.name
+          = find_author(book).name
         p.book-amount 
           | Sô lượng:
           = book.amount
         p.book-rate
           | Đánh giá:
-          - rate = Rate.find(book.id)
-          = rate.star
+          = find_rate(book).star
         = link_to "follow",'#',class: "follow"          
         = link_to "Details", "#",class: "details"
+= will_paginate @books
