--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -17,4 +17,19 @@ body
               a.menu-link = link_to "Contact Us", '#'
           .menu-button
             .button.button--primary =link_to "Signup", signup_path
-            .button.button--secondary =link_to "Log in", '#'
+            .button.button--secondary =link_to "Log in", login_path
+          - if logged_in?
+            li.dropdown
+              a.dropdown-toggle[href="#" data-toggle="dropdown"]
+                |  Account 
+                b.caret
+              ul.dropdown-menu
+                li
+                  = link_to "Profile", current_user
+                li
+                  = link_to "Settings", '#'
+                li.divider
+                li
+                  = link_to "Log out", logout_path, method: "delete"
+          - else
+            / .button.button--secondary =link_to "Log in", login_path
