--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -175,7 +175,7 @@ html {
   }
   //footer
   .footer {
-    margin-top : 300px;
+    margin-top : 100px;
     background-color: $black;
     padding-top: 46px;
     &-main {
@@ -272,42 +272,47 @@ html {
       margin-bottom: 20px;
     }
   }
-  @media screen and (max-width: 767px) {
-    .footer-main {
-      flex-direction: column;
-      gap: 10px;
-    }
-    .footer-right {
-      flex-direction: column;
-      // gap: 10px 0;
-    }
-    .footer-heading {
-      margin-bottom: 10px;
-    }
-    .footer-title {
-      margin-bottom: 20px;
-    }
-    .footer-column:nth-child(3) {
-      padding-top: 0px;
-    }
-    .footer-bottom {
-      flex-direction: column;
-      gap: 10px 0;
-      padding: 13px 50px;
-    }
+@media screen and (max-width: 767px) {
+  .footer-main {
+    flex-direction: column;
+    gap: 10px;
   }
-  .form-search{
-    margin-top: 50px;
-    padding: 20px 10px;
-    display: fe;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: end;
-    background-color: #fff;
+  .footer-right {
+    flex-direction: column;
+    // gap: 10px 0;
   }
-  .filter-search{
-    padding: 7px 35px;
-    margin-right: 10px;
-    background-color: #fff;
+  .footer-heading {
+    margin-bottom: 10px;
   }
+  .footer-title {
+    margin-bottom: 20px;
+  }
+  .footer-column:nth-child(3) {
+    padding-top: 0px;
+  }
+  .footer-bottom {
+    flex-direction: column;
+    gap: 10px 0;
+    padding: 13px 50px;
+  }
+}
+.form-search{
+  margin-top: 50px;
+  padding: 20px 10px;
+  display: fe;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: end;
+  background-color: #fff;
+}
+.filter-search{
+  padding: 7px 35px;
+  margin-right: 10px;
+  background-color: #fff;
+}
+.center_pag {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
