Update code 03 author

--- a/app/assets/stylesheets/authors.scss
+++ b/app/assets/stylesheets/authors.scss
@@ -1,7 +1,14 @@
-.author-list {
-  padding: 15px;
-}
-
-.image-author {
-  width: 200px;
+.authors {
+  display: flex;
+  justify-content: space-around;
+  .author-border {
+    width: 210px;
+    .author-list {
+      padding: 15px;
+      background-color: aliceblue;
+    }
+    .image-author {
+      width: 210px;
+    }
+  }
 }
