--- a/app/views/authors/_author.slim
+++ b/app/views/authors/_author.slim
@@ -1,11 +1,4 @@
-- provide(:title, 'Author')
-.h1_title
-  h1
-    | Author
-.authors
-  h3
-    | Information Author:
-  -@authors.each do |author|
+.author-border 
     a = link_to 
       img.image-author src=" https://i1.rgstatic.net/ii/profile.image/716475023233024-1547832365171_Q512/Michael-Harth.jpg"
     .author-list
