--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -12,7 +12,7 @@ body
             li.menu-item
               a.menu-link = link_to "Blog", '#'
             li.menu-item
-              a.menu-link = link_to "Author", author_path
+              a.menu-link = link_to "Author", authors_path
             li.menu-item
               a.menu-link = link_to "About Us", '#'
             li.menu-item
