--- a/app/views/categories/index.slim
+++ b/app/views/categories/index.slim
@@ -1,7 +1,16 @@
 .categories_all 
   h1 All Category
-  ul
-    - @categories.each do |categories|
-      li
-        = link_to categories.name, categories
-  =link_to "New Categoty", new_category_path
+  h3.new 
+    =link_to "New Categoty", new_category_path
+  .category
+    - @category.each do |category|
+      .category-list
+        .img_c
+          img src=" https://png.pngtree.com/element_our/20190529/ourlarge/pngtree-book-pencil-study-book-image_1216472.jpg"
+        .category-name
+          p Name category:
+          .name 
+            = category.name
+        .detail
+          = link_to "Detail" , category
+  = will_paginate @category
