--- a/app/views/categories/new.slim
+++ b/app/views/categories/new.slim
@@ -1,10 +1,15 @@
-h1 New Categoties
-= form_with model: @categories do |form|
-  div
-    = form.label :name
-    br/
-    = form.text_field :name
-    - @categories.errors.full_messages_for(:name).each do |message|
-      div= message
-  div
-    = form.submit
+.categories_new
+  h1.new 
+    | New Categoties
+  = form_with model: @category do |form|
+      .form_new
+        .img_c
+          img src=" https://png.pngtree.com/element_our/20190529/ourlarge/pngtree-book-pencil-study-book-image_1216472.jpg"
+        .form_new_name
+          = form.label :name 
+        .form_filename
+          = form.text_field :name
+          - @category.errors.full_messages_for(:name).each do |message|
+            div= message
+      .form_new_submit
+        = form.submit
