--- a/app/views/publishers/_publisher.slim
+++ b/app/views/publishers/_publisher.slim
@@ -1,7 +1,7 @@
 .publisher-list
   .publisher-item
     p.publisher-name
-      | Nha Xuat Ban: 
+      | Nhà Xuất Bản: 
       = publisher.name
     = link_to "Edit",'#', class: "edit"        
     = link_to "Delete", "#", class: "delete"
