--- a/app/assets/stylesheets/publishers.scss
+++ b/app/assets/stylesheets/publishers.scss
@@ -14,6 +14,7 @@
     flex-direction:column;
     padding: 20px 20px;
     background-color: #fff;
+    border-bottom: 1px solid;
   }
   &-add{
     padding: 20px 15px;
