--- a/app/views/publishers/index.slim
+++ b/app/views/publishers/index.slim
@@ -3,5 +3,6 @@ h2.pub-title
 = render "search"
 = render "add"
 = render @publishers
+= render "form-new"
 .center_pag
   = will_paginate @publishers
