--- a/app/views/publishers/_add.slim
+++ b/app/views/publishers/_add.slim
@@ -1,1 +1,2 @@
-= link_to "Thêm Mới", new_publisher_path,  remote: true, class: "publisher-add"
+#add-form
+  = link_to "Thêm Mới", new_publisher_path, remote: true, class: "publisher-add"
