--- a/app/views/publishers/_form-new.slim
+++ b/app/views/publishers/_form-new.slim
@@ -1,13 +1,12 @@
 .publisher-new
   h1.new 
     | New Publisher
-  = form_with model: @publisher do |form|
+  .publisher-form
+    = form_with model: @publisher do |form|
       .publisher-form
-        .form_new_name
+        .publisher-form-name
           = form.label :name 
-        .form_filename
+        .publisher-form-fieldname
           = form.text_field :name
-          / - @category.errors.full_messages_for(:name).each do |message|
-          /   div= message
-      .publisher-submit
-        = form.submit "Create"
+        .publisher-submit
+          = form.submit "Create"
