--- a/app/views/publishers/new.js.slim
+++ b/app/views/publishers/new.js.slim
@@ -1,1 +1,1 @@
-| document.querySelector("#add-form").innerHTML = ("#{j render 'form-new', publisher: @publisher}")
+| document.querySelector("#add-form").innerHTML = ("#{j render 'form-new'}")
