--- a/app/views/admin/publishers/_form-new.slim
+++ b/app/views/admin/publishers/_form-new.slim
@@ -2,7 +2,7 @@
   h1.new 
     | New Publisher
   .publisher-form
-    = form_with model: @publisher do |form|
+    = form_with model: @admin_publisher do |form|
       .publisher-form
         .publisher-form-name
           = form.label :name 
