--- a/app/views/admin/publishers/_search.slim
+++ b/app/views/admin/publishers/_search.slim
@@ -1,5 +1,5 @@
 .form-search.pub
-  = form_tag publishers_path, method: :get, 
+  = form_tag admin_publishers_path, method: :get, 
     class: "form-inline" do
       = text_field_tag :name, params[:name], 
         class: "form-control publis"
