--- a/app/views/admin/publishers/show.slim
+++ b/app/views/admin/publishers/show.slim
@@ -2,7 +2,7 @@
   h2
     | Update Publisher
   .publisher-form
-      = form_with model: @publisher do |form|
+      = form_with model: @admin_publisher do |form|
         .publisher-form
           .publisher-form-name
             = form.label :name 
