--- a/app/views/categories/index.slim
+++ b/app/views/categories/index.slim
@@ -1,5 +1,6 @@
 .categories_all 
   h1 All Category
+  = render "form-search"
   h3.new 
     =link_to "New Categoty", new_category_path
   .category
