--- a/app/views/categories/show.slim
+++ b/app/views/categories/show.slim
@@ -10,4 +10,4 @@
       .categories_edit
         = link_to "Edit Category", edit_category_path
       .categories_delete
-        = link_to "delete Category", category_path, method: :delete, data: {confirm: "Are You sure?"}
+        = link_to "delete Category", category_path(@category), method: :delete, data: {confirm: "Are You sure?"}
