--- a/app/views/admin/publishers/show.slim
+++ b/app/views/admin/publishers/show.slim
@@ -2,11 +2,11 @@
   h2
     | Update Publisher
   .publisher-form
-      = form_with model: @admin_publisher do |form|
-        .publisher-form
-          .publisher-form-name
-            = form.label :name 
-          .publisher-form-fieldname
-            = form.text_field :name, value: @publisher.name
-          .publisher-submit
-            = form.submit "Update"
+    = form_for([:admin, @publisher]) do |form|
+      .publisher-form
+        .publisher-form-name
+          = form.label :name 
+        .publisher-form-fieldname
+          = form.text_field :name, value: @publisher.name
+        .publisher-submit
+          = form.submit "Update"
