manage publisher export csv

--- a/app/views/admin/publishers/_add.slim
+++ b/app/views/admin/publishers/_add.slim
@@ -1,2 +1,2 @@
 #add-form
-  = link_to "Thêm Mới", new_admin_publisher_path, remote: true, class: "publisher-add"
+  = link_to "Thêm Mới", new_admin_publisher_path, class: "publisher-add"
