--- a/app/assets/stylesheets/publishers.scss
+++ b/app/assets/stylesheets/publishers.scss
@@ -10,6 +10,10 @@
   &-amount{
     width: 80px;
   }
+  &-but{
+    display: flex;
+    gap: 0 15px;
+  }
   &-list{
     display: flex;
     flex-direction:column;
@@ -29,7 +33,7 @@
     gap: 0 65px;  
   }
   &-add{
-    padding: 20px 15px;
+    padding: 20px 62px;
     border-radius: 5px;
     color: #fff;
     background-color: rgb(230, 182, 62);
@@ -80,6 +84,13 @@
     background-color: white;
     margin: 10px 0;
   }
+  &-menu{
+    width: 200px;
+    background-color: #fff;
+    height: 500px;
+    box-shadow: 0px 12px 35px rgba(160, 121, 0, 0.2);
+
+  }
 }
 .edit,.delete{
   padding: 10px 15px;
@@ -110,19 +121,26 @@
   font-weight: bold;
   display: flex;
   gap: 0px 145px;
+  margin-top: 20px;
   &-details{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 0 140px;
+    gap: 0 135px;
   }
 }
 .container-admin{
   margin-top: 50px;
   background-color: rgb(255,247,223);
-  padding: 50px 100px;
+  padding: 0 100px;
+  display: flex;
+  flex-direction: row;
+  gap: 0 40px;
 }
 .cre{
   display: flex;
   gap: 0px 100px;
+}
+.export{
+  padding: 20px 75px;
 }
