--- a/app/assets/stylesheets/category.scss
+++ b/app/assets/stylesheets/category.scss
@@ -101,3 +101,9 @@ label{
 .form-search.pub{
   display:flex;
 }
+/* search category*/
+.button--searchh{
+  width: 100px;
+  height: 34px;
+  margin-left: 10px;
+}
