--- a/app/views/users/new.slim
+++ b/app/views/users/new.slim
@@ -5,7 +5,7 @@
 .row
   .col-md-offset-3
     = form_for(@user) do |f|
-      = render 'shared/error_messages', object: f
+      = render 'shared/error_messages', object: @user
       = f.label :name
       = f.text_field :name, class: 'form-control'
       = f.label :email
