Add code export file author

--- a/app/views/admin/authors/_add.slim
+++ b/app/views/admin/authors/_add.slim
@@ -1,4 +1,4 @@
 .author-add
   = link_to "Add Author", new_admin_author_path
 .author-add
-  = link_to "Export Author", "#"
+   = link_to "Export Author", admin_authors_path(format: "xls")
