--- a/app/assets/stylesheets/publishers.scss
+++ b/app/assets/stylesheets/publishers.scss
@@ -48,6 +48,7 @@
   &-name{
     display: inline-block;
     width: 150px;
+    text-transform: capitalize;
   }&-form{
     display: flex;
     align-items: flex-end;
@@ -61,7 +62,7 @@
       margin-right: 40px;
       input{
         padding: 5px 10px;
-        width: 700px;
+        width: 600px;
       }
     }
   }
@@ -92,13 +93,16 @@
 
   }
 }
-.edit,.delete{
+.edit,.delete, .detail{
   padding: 10px 15px;
   border-radius: 5px;
   color: #fff;
   &:hover{
     text-decoration: none;
   }
+}
+.detail{
+  background-color: rgb(59, 135, 223);
 }
 .edit{
   background-color: rgb(24, 207, 122);
@@ -126,13 +130,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 0 135px;
+    gap: 0 100px;
+  }
+  &-book{
+    gap: 0 140px;
   }
 }
 .container-admin{
-  margin-top: 50px;
   background-color: rgb(255,247,223);
-  padding: 0 100px;
+  padding: 0 50px;
   display: flex;
   flex-direction: row;
   gap: 0 40px;
@@ -143,4 +149,41 @@
 }
 .export{
   padding: 20px 75px;
+}
+.yield-content{
+  overflow: hidden;
+}
+.book-se{
+  width: 400px !important;
+}
+.sidebar{
+  box-shadow: 0px 12px 35px rgba(160, 121, 0, 0.2);
+  height: 100vh;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 20px 0;
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: block;
+    padding: 15px 60px;
+    background-color: #e6b63e;
+
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  .dropdown-content a:hover {background-color: #f1f1f1}
 }
