--- a/app/views/admin/books/index.slim
+++ b/app/views/admin/books/index.slim
@@ -3,6 +3,9 @@
     h2.pub-title
       | Manage Books
     .publisher-but
+    .publisher-but
+      = render "add"
+      = render "export"
     = render "search"
     = render "head"
     = render @books
