--- a/app/assets/stylesheets/admin_book.scss
+++ b/app/assets/stylesheets/admin_book.scss
@@ -53,5 +53,18 @@ select#book_author_id {
   padding: 5px 31px;
 }
 select#book_publisher_id {
-  padding: 5px 53px;
+  padding: 5px 29px;
+}
+#error_explanation {
+  color: red;
+  ul {
+      color: red;
+      margin: 0 0 30px 0;
+  }
+}
+input#book_author_attributes_name {
+  padding: 5px;
+}
+input#book_publisher_attributes_name {
+  padding: 5px;
 }
