--- a/app/views/admin/books/index.slim
+++ b/app/views/admin/books/index.slim
@@ -7,6 +7,7 @@
       = render "add"
       = render "export"
     = render "search"
+    = render "shared/notifi_messa"
     = render "head"
     = render @books
     .center_pag
