--- a/app/views/admin/publishers/index.slim
+++ b/app/views/admin/publishers/index.slim
@@ -7,9 +7,7 @@
       = render "export"
     = render "search"
     = render "head"
-    - flash.each do |type, msg|
-      .alert
-        = msg
+    = render "shared/notifi_messa"
     - if @publishers.length > 0
       = render @publishers
     - else
