--- a/app/assets/stylesheets/admin_book.scss
+++ b/app/assets/stylesheets/admin_book.scss
@@ -68,3 +68,6 @@ input#book_author_attributes_name {
 input#book_publisher_attributes_name {
   padding: 5px;
 }
+select#book_publisher_id {
+  padding-right: 52px;
+}
