--- a/app/views/layouts/admin.slim
+++ b/app/views/layouts/admin.slim
@@ -17,5 +17,7 @@ body
   .container-admin
     = render "layouts/sidebar"
     .yield-content
+      = render "shared/notifi_messa"
       = yield 
   = render'layouts/footer'
+  = render'layouts/header'
