--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -27,7 +27,9 @@ body
                   = link_to "Profile", '#'
                 li
                   = link_to "Settings", '#'
-                li.divider
+                li
+                  -if @current_user.is_admin?
+                    = link_to "Dashboard", admin_books_path
                 li
                   = link_to "Log out", logout_path, method: "delete"
           - else
