--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -10,11 +10,9 @@ body
             li.menu-item
               a.menu-link = link_to "Home", '#'
             li.menu-item
-              a.menu-link = link_to "Blog", '#'
+              a.menu-link = link_to "Books", books_path
             li.menu-item
               a.menu-link = link_to "Author", authors_path
-            li.menu-item
-              a.menu-link = link_to "About Us", '#'
             li.menu-item
               a.menu-link = link_to "Contact Us", '#'
           - if logged_in?
@@ -27,7 +25,9 @@ body
                   = link_to "Profile", '#'
                 li
                   = link_to "Settings", '#'
-                li.divider
+                li
+                  -if @current_user.is_admin?
+                    = link_to "Dashboard", '#'
                 li
                   = link_to "Log out", logout_path, method: "delete"
           - else
