--- a/app/views/admin/books/_form_new.slim
+++ b/app/views/admin/books/_form_new.slim
@@ -40,3 +40,4 @@
             = pub.text_field :name, placeholder: "Publisher new"
         .book-submit
           = form.submit "Add Book", class: "book-update"
+          = link_to "Back", admin_books_path, class: "book-update"
