--- a/app/views/layouts/_sidebar.slim
+++ b/app/views/layouts/_sidebar.slim
@@ -5,3 +5,5 @@
     = link_to "Books", admin_books_path, class: "btn-side"
   .dropdown
     = link_to "Authors", admin_publishers_path, class: "btn-side"
+  .dropdown
+    = link_to "Request Books", admin_borrow_requets_path, class: "btn-side"
