--- a/app/views/layouts/_footer.slim
+++ b/app/views/layouts/_footer.slim
@@ -4,6 +4,7 @@ footer
       .footer-main
         .footer-left
           .footer-logo
+            = image_tag "Logo.png"
           span.footer-title
             | Semaj Africa is an online education platform that delivers video courses,
             | programs and resources.
@@ -19,8 +20,6 @@ footer
                 a.footer-link href="#!"  About Us
               li.footer-item
                 a.footer-link href="#!"  Contact Us
-              li.footer-item
-                a.footer-link href="#!"  Become A Contributor
           .footer-column
             h2.footer-heading Contact Us
             ul.footer-link
