--- a/app/views/users/new.slim
+++ b/app/views/users/new.slim
@@ -1,17 +1,25 @@
 - provide(:title, 'Sign up')
-.h1_title
-  h1
-    | Sign up
-.row
-  .col-md-offset-3
-    = form_for(@user) do |f|
-      = render 'shared/error_messages', object: @user
-      = f.label :name
-      = f.text_field :name, class: 'form-control'
-      = f.label :email
-      = f.email_field :email, class: 'form-control'
-      = f.label :password
-      = f.password_field :password, class: 'form-control'
-      = f.label :password_confirmation, "Confirmation"
-      = f.password_field :password_confirmation, class: 'form-control'
-      = f.submit "Create my account", class: "btn btn-primary form-control"
+.signin
+  .signin_left
+    .signin_head
+      .signin-element
+        = image_tag "Element01.png"
+      .signin_image
+        = image_tag "Logo.png"
+      p
+        | Please create a new account here
+    .signin-form
+      = form_for(@user) do |f|
+        = render 'shared/error_messages', object: @user
+        = f.text_field :name, class: 'signin_control', placeholder: "Name"
+        = f.email_field :email, class: 'signin_control', placeholder: "Email"
+        = f.password_field :password, class: 'signin_control', placeholder: "Password"
+        = f.password_field :password_confirmation, class: 'signin_control', placeholder: "Comfirm Password"
+        = f.submit "Create my account", class: "button--primary signin-btn"
+    .signin-footer
+      = image_tag "Element02.png"
+  .signin_right
+    = image_tag "Group.png"
+    p
+      | Do you know you can easily choose your mode of learning on this platform? Hover aboard to know more
+
