--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -7,7 +7,7 @@ $gray: #5c5c5c;
 $black: #212121;
 $gray-light: #fff7df;
 $bgc-gradient: linear-gradient(253.58deg, #ffc000 1.55%, #ff8a00 95.8%);
-//global
+
 body {
   line-height: 1;
   color: $gray;
@@ -40,11 +40,13 @@ body {
     white-space: nowrap;
     font-weight: 700;
     &--primary {
-      // background-image: linear-gradient(253.58deg, #ffc000 1.55%, #ff8a00 95.8%);
+      background-image: linear-gradient(253.58deg, #ffc000 1.55%, #ff8a00 95.8%);
       color: $gray-light;
       background-color: $primary-color;
-    }
-    &--secondary {
+      a{
+        color: #fff;
+        text-decoration: none;
+      }
       background-color: $gray-light;
       color: $primary-color;
     }
@@ -112,21 +114,22 @@ html {
   }
 //header
 .header {
+
   background: rgb(255,255,255);
   box-shadow: 0px 12px 35px rgba(160, 121, 0, 0.2);
   &-main {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 0 240px;
     padding: 29px 0;
   }
   &-logo {
     width: 160px;
-    height: 70px;
+    height: 38px;
     overflow: hidden;
     img {
-      // width: 100%;
+      width: 100%;
       height: 100%;
       object-fit: cover;
     }
@@ -142,6 +145,92 @@ html {
       gap: 0 0;
     }
   }
+  a.dropdown-toggle {
+    color: $gray;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+  .hero {
+    padding: 129px 208px 103px 180px;
+    background-image: linear-gradient(90deg, $color2 0%, $color1 100%);
+    &-main {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 0 149px;
+    }
+    &-heading {
+      max-width: 534px;
+      font-weight: 400;
+      font-size: 44px;
+      line-height: 158.34%;
+      color: $gray-light;
+      margin-bottom: 26px;
+    }
+    &-title {
+      display: block;
+      max-width: 444px;
+      font-weight: 400;
+      line-height: calc(33 / 18);
+      font-size: 18px;
+      color: $gray-light;
+      margin-bottom: 127px;
+    }
+    &-image {
+      width: 426px;
+      height: 382px;
+      overflow: hidden;
+      transform: translateY(-42%);
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+  }
+  @media screen and (max-width: 1449px) {
+    .hero {
+      padding: 10px 50px;
+    }
+    .hero-main {
+      gap: 0 120px;
+    }
+    .hero-heading {
+      font-size: 40px;
+    }
+    .hero-image {
+      transform: translateX(-30%);
+    }
+  }
+  @media screen and (max-width: 1023px) {
+    .hero {
+      padding: 40px 30px;
+    }
+    .hero-heading {
+      font-size: 30px;
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    .hero-main {
+      flex-direction: column;
+      gap: 20px 0;
+      overflow: hidden;
+    }
+    .hero-heading {
+      font-size: 20px;
+      margin-bottom: 15px;
+    }
+    .hero-title {
+      font-size: 13px;
+      text-transform: capitalize;
+      margin-bottom: 20px;
+    }
+    .hero-image {
+      transform: none;
+    }
+  }
+  
   //menu
   .menu {
     display: flex;
@@ -189,7 +278,6 @@ html {
   }
   //footer
   .footer {
-    margin-top : 100px;
     background-color: $black;
     padding-top: 46px;
     &-main {
@@ -329,4 +417,118 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.signin{
+  margin: 20px 0;
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content:center;
+  align-items: inherit;
+  height: 800px;
+  &_head{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 28px;
+    p{
+      font-size: 14px;
+      font-weight: 400;
+    }
+  }
+  &-form{
+    a{
+      &:hover{
+        text-decoration: none;
+      }
+    }
+  }
+  &_left{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(255,247,223);
+  }
+  &-btn{
+    width: 500px;
+    border-radius:100px;
+    border: none;
+    padding: 20px 200px;
+    color: white;
+    font-size: 15px;
+    font-weight: 1000;
+  }
+  &-footer{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: inherit;
+  }
+  &-forgot{
+    margin-top: 20px; 
+    text-align: center;
+    display: inherit;
+  }
+  &-up{
+    display: flex;
+    justify-content: flex-end;
+    a{
+      text-decoration: none;
+    }
+  }
+  &_control{
+    padding: 22px 20px;
+    border-radius: 100px;
+    height: 60px;
+    display: block;
+    width: 500px;
+    border: none;
+    background-color: #fff;
+    margin-bottom: 20px;
+    border: 1px solid #EFEFEF;
+    color: black;
+    font-size: 15px;
+    font-weight: 600;
+  }
+  &_image{
+    width: 170px;
+    height: 50px;
+    overflow: hidden;
+    margin-bottom: 40px;
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: contain;  
+    }
+  }
+  &_right{
+    width: 50%;
+    height: 100%;
+    background-color: #C4C4C4;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    p{
+      width: 300px;
+      color: #ffffff;
+      font-weight: 700;
+      font-size: 14px;
+      align-items:center;
+      margin-bottom: 92px;
+      display: block;
+      line-height: calc(20 / 17);
+      text-align: center;
+    }
+  }
+  &-element{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100px;
+  }
 }
