--- a/app/views/admin/borrow_requets/_borrow_requet.slim
+++ b/app/views/admin/borrow_requets/_borrow_requet.slim
@@ -11,7 +11,7 @@
         = borrow_requet.status == 0 ? "Chua duyet" : "Da duyet"
     .publisher-button.book-button
       = link_to "Details", "#", class: "detail" 
-      - unless borrow_requet.status == 1
-        = button_tag "Accept", class: "edit", class: "edit edit_accept", data: {book_id: borrow_requet.id, status: "1"}        
+      = button_tag "Accept", class: "edit edit_accept", data: {book_id: borrow_requet.id, status: "1"}  
+        / unless borrow_requet.status == 1 ? class: "edit edit_accept" : class: "edit edit_accept dis",
       = link_to "Reject", "#", class: "delete",
       method: :delete, data: {confirm: "Are You sure?"}
