--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -15,6 +15,8 @@ head
 
 body
   = render'layouts/header'
+  - unless !logged_in?
+    = render'layouts/hero'
   .container
     - flash.each do |message_type, message|
       div class=("alert alert-#{message_type}") = message
